--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
         <section class="tweet-box">
-            <form method="POST", action="/tweets">
-              <textarea id="tweet-text" name="tweet-text" placeholder="What are you humming about?"></textarea>
+            <form id="tweet-form" method="POST">
+              <textarea id="tweet-text" name="tweet-text" type="text" placeholder="What are you humming about?"></textarea>
               <br>
               <input id="tweet-button" type="submit" value="Tweet">
               <span id="counter"><em id="count" default value="maxValue"></em></span>
