added responsive elemtns for large screens and mobile

--- a/public/index.html
+++ b/public/index.html
@@ -52,19 +52,19 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <div id="error_0" class="error">
-        <span>STOP! It's hammer time! Add some text before you submit.</span>
+        <span>STOP! It's hammer time! </br> Add some text before you submit.</span>
       </div>
       <div id="errorToo" class="error">
           <span>Hi! It looks like you have too many characters.  Remove some and try again!</span>
         </div>
         <section class="tweet-box">
             <form id="tweet-form" method="POST">
-              <textarea id="tweet-text" type="text" name="text" placeholder="What are you humming about?"></textarea>
-              <br>
+              <textarea id="tweet-text" type="text" name="text" placeholder="What are you chirping about?"></textarea>
+              <div id="lower-box">
               <input id="tweet-button" type="submit" value="Tweet">
               <span id="counter"><em id="count" default value="maxValue"></em></span>
+            </div>
             </form>
-            
           </section>
         <div id="tweets-container">
  
