minor updates to comments and linting

--- a/public/index.html
+++ b/public/index.html
@@ -53,12 +53,14 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <!-- errors hidden -->
       <div id="error_0" class="error">
         <span>STOP! It's hammer time! </br> Add some text before you submit.</span>
       </div>
       <div id="errorToo" class="error">
           <span>Hi! It looks like you have too many characters.  Remove some and try again!</span>
         </div>
+        <!-- tweet form - hidden by default -->
         <section class="tweet-box">
           <form id="tweet-form" method="POST">
             <textarea id="tweet-text" type="text" name="text" placeholder="What are you chirping about?"></textarea>
@@ -69,7 +71,7 @@
           </form>
         </section>
         <div id="tweets-container">
-
+          <!-- tweets will show here -->
       </div> <br><br>
     </main>
     <br>
