adding updated readme and images

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <div class="logo">
-      <span style="font-family:Bungee">tweeter</span>
+      <span style="font-family:Bungee">Tweeter</span>
     </div>
       <div id="anchor-click">
           <span>Click below to Tweet</span>
